--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint-fix": "eslint . --fix"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.7",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "react": "17.0.2",
